crates/ros-z/tests/ui/message_derive/unsupported_map_key.stderr
error[E0277]: the trait bound `CustomMessageKey: ros_z::msg::MapKey` is not satisfied
  --> tests/ui/message_derive/unsupported_map_key.rs:15:13
   |
15 |     values: HashMap<CustomMessageKey, u32>,
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `ros_z::msg::MapKey` is not implemented for `CustomMessageKey`
  --> tests/ui/message_derive/unsupported_map_key.rs:9:1
   |
 9 | struct CustomMessageKey {
   | ^^^^^^^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `ros_z::msg::MapKey`:
             bool
             i16
             i32
             i64
             i8
             std::string::String
             u16
             u32
           and $N others
   = note: required for `HashMap<CustomMessageKey, u32>` to implement `Message`
